Updated templates for search results

--- a/flaskapp/app/pit_app/templates/layoutTables.html
+++ b/flaskapp/app/pit_app/templates/layoutTables.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/static/css/ext/bootstrap-select.css">
     <link rel="stylesheet" href="/static/css/ext/datatables.min.css">
     <link rel="stylesheet" href="/static/css/ext/sb-admin-2.css">
+    <link rel="stylesheet" href="/static/css/ext/sunburst.css"/>
     
     <link rel="stylesheet" href="/static/css/pitdb.css">
   </head>
@@ -85,6 +86,8 @@
     <!-- Custom Theme JavaScript -->
     <script src="/static/js/ext/sb-admin-2.js"></script>
     <script src="/static/js/ext/validator.js"></script>
+
+    
     <!--script src="/static/js/ext/bootstrap-select.js"></script>-->
 
     <script src="/static/js/pit.js"></script>
