--- a/flaskapp/app/pit_app/templates/results/tge.html
+++ b/flaskapp/app/pit_app/templates/results/tge.html
@@ -31,7 +31,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">TGE_{{ tge.id }}</h1>
+                <h1 class="page-header">{{ summary.tge.accession }}</h1>
             </div>
         </div>
 
@@ -44,18 +44,19 @@
                     
                     <div class="panel-body">
                         <div class="row" style="margin-left:5px">
-                            <label>TGE ID:</label> TGE_{{ tge.id }}</br>
-                            <label>TGE Type:</label>  </br>
-                            <label>Description:</label>  </br>
+                            <label>TGE ID:</label> {{ summary.tge.id }}</br>
+                            <label>TGE Type:</label> {{ summary.tge.tge_class }}</br>
+                            <label>Uniprot ID:</label><a href="/organism/{{ org }}" target="_blank"> {{ summary.tge.uniprot_id }}</a></br>
+                            <label>#Observations:</label> {{ summary.obsCount }}</br>
                             <label>Organisms:</label> 
-                            {% for org in organisms %}
-                                <a href="#" target="_blank">{{ org }}</a>,
+                            {% for org in summary.organisms %}
+                              <a href="/organism/{{ org }}" target="_blank">{{ org }}</a>,
                             {% endfor %}</br>
                         </div>
-                        <div class="row">
+                        <!--div class="row">
                             <div id="pie_organism" class="col-xs-6" style="height:350px;"></div>
                             <div id="pie_sample"   class="col-xs-6 pull-right" style="height:350px;"></div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
 
@@ -65,16 +66,17 @@
                     </div>
                     
                     <div class="panel-body">
-                        <table class="table table-striped table-bordered dataTable no-footer" id="tgeSummary" >
+                        <div class="wordwrap"><label>TGE Sequence:</label> <span id="tgeSeq" value={{ summary.tge.amino_seq }}>{{ summary.tge.amino_seq }}</span></div><br/><br/>
+
+                        <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
                         <thead>
                           <tr>
-                            <th>Observations</th>
+                            <th>Obs</th>
                             <th>Experiment</th>
                             <th>Sample</th>
                             <th>Organism</th>
-                            <th>Type</th>
-                            <th>Strand</th>
-                            <th>Num of Pept</th>
+                            <th>Type&nbsp;/&nbsp;Strand</th>
+                            <th>Identified Peptides</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -84,49 +86,15 @@
                               <td>{{ res.experiment }}</td>
                               <td>{{ res.sample }}</td>
                               <td>{{ res.organism }}</td>
-                              <td>{{ res.type }}</td>
-                              <td>({{ res.strand }})</td>
-                              <td>{{ res.peptide_num }}</td>
+                              <td>{{ res.type }}&nbsp;({{ res.strand }})</td>
+                              <td class="wordwrap"><strong>Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}, <br/>{% endfor %}</td>
                             </tr>
                           {% endfor %}
                         </tbody>
                       </table>
                     </div>
-                    <!-- /.panel-body -->
                 </div>
 
-                <!-- /.panel -->
-                <div class="panel panel-default" id="sequences">
-                    <div class="panel-heading ">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Sequences
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body collapse in" id="sequences">
-                        <div class="wordwrap"><label>TGE Sequence:</label> <span id="tgeSeq" value={{ tge.amino_seq }}>{{ tge.amino_seq }}</span></div><br/>
-                        <div class="wordwrap"><label>Transcript Sequence(s):</label> <!--{{ dna_seq }}</div><br/>
-                        <div class="wordwrap"><label>Peptide Sequence(s):</label> {% for peptide in peptides %}<span class="peptide_seq" value={{ peptide }}>{{ peptide }}</span>, {% endfor %} -->
-                        <table class="table table-striped table-bordered dataTable no-footer" id="resTrs" >
-                        <thead>
-                          <tr>
-                            <th>Observation</th>
-                            <th>DNA Sequence</th>
-                            <th>Identified Peptides</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          {% for res in results %}
-                            <tr>
-                              <td>{{ res.observation }}</td>
-                              <td><p class="dna-seq">{{ res.dna_seq }}</p></td>
-                              <td>{{ res.peptides }}</td>
-                            </tr>
-                          {% endfor %}
-                        </tbody>
-                      </table>
-                      </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
 
                 <div class="panel panel-default" id="massspec_stats">
                     <div class="panel-heading ">
@@ -144,62 +112,11 @@
                     </div>
                 </div>
 
-                <div class="panel panel-default" id="psm">
-                    <div class="panel-heading ">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> PSM
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body collapse in" id="sequences">
-                        <div class="wordwrap"><label>Selected Peptide:</label> <span id="peptide" value={{ tge.amino_seq }}>Blah</span></div><br/>
-                        <div class="wordwrap"><label>PSM Info:</label> 
-                        <table class="table table-striped table-bordered dataTable no-footer" id="psmTable" >
-                        <thead>
-                          <tr>
-                            <th>Name</th>
-                            <th>Spectrum ID</th>
-                            <th>Retention</th>
-                            <th>Calc mz</th>
-                            <th>Exp mz</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                            </tr>
-                        </tbody>
-                      </table>
-                      </div>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-
-                <!-- /.panel -->
-                <div class="panel panel-default" id="genomic">
-                    <div class="panel-heading ">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Genomic Context
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <label>Amino Acids:</label><br/>
-                        <label>Region:</label> <br/>
-                        <label>Location:</label> <br/>
-                        <label>Assembly:</label> <br/>
-                        <label>UniProt:</label> 
-                        <!--<a href="http://www.uniprot.org/uniprot/"+{{ tge.uniprot_id }} target="blank">{{ tgeObs.uniprot_id }}</a><br/>-->
-                        <label>Group membership:</label>  <br/>
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-
                 <div class="panel panel-default" id="mass_statistics">
                     <div class="panel-heading">
                         <i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Data Statistics
                     </div>
-                    <!-- /.panel-heading -->
+                    
                     <div class="panel-body">
                         <label>Average peptide coverage:</label> <br>
                         <label>Average peptides per TGE:</label> <br/>
@@ -208,22 +125,105 @@
                         <label>Software: </label>
                         <div id="tester" style="width:700px;height:450px;"></div>
                     </div>
-                    <!-- /.panel-body -->
                 </div>
             
             </div>
         </div>
-        <!-- /.row -->
     </div>
-    <!-- /#page-wrapper -->
-
+<script src="/static/js/ext/jquery-2.1.4.min.js"></script>
 <script src="/static/js/ext/plotly.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script>
+
+var width = 400,
+    height = 200,
+    radius = Math.min(width, height) / 2;
+
+var color = d3.scale.ordinal()
+    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+var arc = d3.svg.arc()
+    .outerRadius(radius - 10)
+    .innerRadius(0);
+
+var labelArc = d3.svg.arc()
+    .outerRadius(radius - 40)
+    .innerRadius(radius - 40);
+
+var pie = d3.layout.pie()
+    .sort(null)
+    .value(function(d) { return d.count; });
+
+var svg = d3.select("#summary").append("svg")
+    .attr("width", width)
+    .attr("height", height)
+  .append("g")
+    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+
+d3.json("/tge/{{ summary.tge.accession }}/tge.json", function(error, data) {
+
+  var g = svg.selectAll(".arc")
+        .data(pie(data))
+        .enter().append("g")
+        .attr("class", "arc");
+
+  g.append("path")
+        .attr("d", arc)
+        .style("fill", function (d) {
+        return color(d.data.organism);
+    });
+
+  g.append("text")
+      .attr("transform", function(d) { return "translate(" + labelArc.centroid(d) + ")"; })
+      .attr("dy", ".35em")
+      .style("font-size","10px")
+      .text(function(d) { return d.data.organism +" "+d.data.count; });
+});
+
+
+</script>
 <script>
     TESTER = document.getElementById('tester');
     Plotly.plot( TESTER, [{
     x: [1, 2, 3, 4, 5],
     y: [1, 2, 4, 8, 16] }], {
     margin: { t: 0 } } );
+
+    //alert("{{ jsonDump.values() }}")
+    // var xy; 
+    // jQuery.get('{{ jsonDump }}', function(data) {
+    //   //alert(data)
+    //   xy = JSON.parse(data);
+    // }); 
+    // alert(xy['1']);
+
+    var pieOrganism = [{
+      values: [19, 26],
+    //labels: ["{{ jsonDump.keys() }}"],
+      type: 'pie'
+    }];
+
+    var pieSample = [{
+      values: [19, 26, 55],
+      labels: ['Residential', 'Non-Residential', 'Utility'],
+      type: 'pie'
+    }];
+
+    var layout = {
+      autosize: false,
+      width: 250,
+      height: 250,
+      margin: {
+        l: 40,
+        r: 40,
+        b: 0,
+        t: 20,
+        pad: 0
+      }
+    };
+
+    Plotly.newPlot('pie_organism', pieOrganism, layout);
+    Plotly.newPlot('pie_sample',   pieSample,   layout);
 </script>
 
 {% endblock %}
