--- a/flaskapp/app/pit_app/templates/search/results.html
+++ b/flaskapp/app/pit_app/templates/search/results.html
@@ -5,8 +5,9 @@
 <div id="search-output">
   <input type="hidden" id="searchData" value={{ searchData }}>
   <input type="hidden" id="searchType" value={{ searchType }}>
+  <p><h4>List of TGEs:</h4></p><br/>
 
-  <table class="table table-striped table-bordered dataTable no-footer" id="searchRes" >
+  <table class="table table-striped table-bordered dataTable no-footer" class="searchRes" id="tgeSearch">
     <thead>
       <tr>
         <th>Accession Number</th>
@@ -19,12 +20,12 @@
       </tr>
     </thead>
   	<tbody>
-      {% for tge in tgeRes %}
+      {% for tge in tgeList %}
       	<tr>
-      	  <td>{{ tge.id }}</td>
-          <td>{{ tge.type }}</td>
-          <td></td>
-          <td>{% for org in tge.organisms %}{{ org }},{% endfor %}</td>
+      	  <td>{{ tge.accession }}</td>
+          <td>{{ tge.class }}</td>
+          <td>{{ tge.uniprotID }}</td>
+          <td>{% for org in tge.organisms %}{{ org.organism }}, {% endfor %}</td>
           <td>{{ tge.obsNum }}</td>
           <td>{{ tge.expNum }}</td>
           <td>{{ tge.length }}</td>
