--- a/flaskapp/app/pit_app/templates/layoutTables.html
+++ b/flaskapp/app/pit_app/templates/layoutTables.html
@@ -84,12 +84,14 @@
     <script src="/static/js/ext/morris-data.js"></script>-->
 
     <!-- Custom Theme JavaScript -->
-    <script src="/static/js/ext/sb-admin-2.js"></script>
+    <!-- <script src="/static/js/ext/sb-admin-2.js"></script>-->
     <script src="/static/js/ext/validator.js"></script>
-
+    
+    <script type="text/javascript" src="/static/js/genoverse.combined.js"></script>
+    <script type="text/javascript" src="/static/js/genomes/grch38.js"></script>
+    <script type="text/javascript" src="/static/js/plugins/fileDrop.js"></script>
     
     <!--script src="/static/js/ext/bootstrap-select.js"></script>-->
 
     <script src="/static/js/pit.js"></script>
-  </body>
 </html>
