Corrected layout on organism and tge pages

--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -1,4 +1,4 @@
-{% extends "layoutTables.html" %}
+{% extends "layout.html" %}
 {% block content %}
   
 <div class="navbar-default sidebar" role="navigation">
