--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -1,4 +1,4 @@
-{% extends "layoutTables.html" %}
+{% extends "layout.html" %}
 {% block content %}
   
 <div class="navbar-default sidebar" role="navigation">
@@ -54,7 +54,7 @@
           <div class="panel-body">
             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
             <br/><br/>
-            <table class="table table-striped table-bordered dataTable no-footer" class="searchRes">
+            <table class="table table-striped table-bordered dataTable no-footer">
             <thead>
               <tr>
                 <th>TGE Accession</th>
