--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -54,7 +54,7 @@
           <div class="panel-body">
             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
             <br/><br/>
-            <table class="table table-striped table-bordered dataTable no-footer">
+            <table class="table table-striped table-bordered dataTable no-footer tgeTable">
             <thead>
               <tr>
                 <th>TGE Accession</th>
