--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -7,7 +7,7 @@
   <input type="hidden" id="searchType" value={{ searchType }}>
   <p><h4>List of TGEs:</h4></p><br/>
 
-  <table class="table table-striped table-bordered dataTable no-footer" class="searchRes" id="tgeSearch">
+  <table class="table table-striped table-bordered dataTable no-footer tgeTable" id="tgeSearch">
     <thead>
       <tr>
         <th>Accession Number</th>
