Updating the about the project page

--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -18,9 +18,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Upload</a></li>
                 <li><a href="/search">Search</a></li>
-                <li><a href="/advanced_search">View</a></li>
                 <li><a href="/signin">Login</a></li>
             </ul>
         </div>
@@ -45,27 +43,26 @@
 
 <a  name="services"></a>
 <div class="content-section-a">
-
     <div class="container" id="about">
         <div class="row">
-            <div class="col-lg-5 col-sm-6">
+            <div>
+                <h2 class="section-heading">ABOUT PIT-DB</h2>
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">ABOUT PIT-DB</h2>
-                <p class="lead">PIT-DB is a publicly available database for the storage and sharing of results from PIT experiments. </p>
+                <p class="lead">PIT-DB is a publicly available database for the storage and sharing of results from PIT (Proteomics Informed by Transcriptomics experiments. PIT involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome.  </p>
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
             </div>
-            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                <!--<img class="img-responsive" src="img/ipad.png" alt="">-->
-            </div>
+           <!--  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <img class="img-responsive" src="img/ipad.png" alt="">
+            </div> -->
         </div>
 
     </div>
 </div>
-
+<!-- 
 <div class="content-section-b">
-
     <div class="container">
-
         <div class="row">
             <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                 <hr class="section-heading-spacer">
@@ -74,12 +71,11 @@
                 <p class="lead">Lorem ipsum dolor sit amet, eam labitur accusam te. In expetendis eloquentiam mea. Per natum adhuc expetendis ad. Ad essent putant per. Ullum epicuri detracto his ne. An usu prima philosophia, virtute platonem duo ad.</p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                <!--<img class="img-responsive" src="img/dog.png" alt="">-->
+                <img class="img-responsive" src="img/dog.png" alt="">
             </div>
         </div>
-
     </div>
-</div>
+</div> -->
 
 <footer>
     <div class="container">
