--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -29,7 +29,7 @@
 
     <div class="row">
       <div>
-      	<div class="panel panel-default" id="summary">
+      	<div class="panel panel-default">
           <div class="panel-heading">
             <i class="fa fa-bar-chart-o fa-fw"></i> Summary
           </div>
@@ -43,6 +43,7 @@
               <label># Peptides: </label> {{ summary.pepNum }}
           	</div>
           </div>
+          <div id="chart"></div>
       </div>
 
       <div>
@@ -101,53 +102,132 @@
 
 
 <script src="/static/js/ext/jquery-2.1.4.min.js"></script>
-<script src="/static/js/ext/plotly.min.js"></script>
 <script src="//d3js.org/d3.v3.min.js"></script>
+
 <script>
 
 var width = 350,
-    height = 150,
-    radius = Math.min(width, height) / 2;
+    height = 250,
+    radius = Math.min(width, height) / 2, 
+    donutWidth = 50,
+    legendRectSize = 18,
+    legendSpacing = 4;
 
-var color = d3.scale.ordinal()
-    .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+var color = d3.scale.category20c();
+
+var svg = d3.select("#chart")
+            .append("svg")
+              .attr("width",  width)
+              .attr("height", height)
+            .append("g")
+              .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
 var arc = d3.svg.arc()
-    .outerRadius(radius - 10)
-    .innerRadius(0);
-
-var labelArc = d3.svg.arc()
-    .outerRadius(radius - 40)
-    .innerRadius(radius - 40);
+            .innerRadius(radius - donutWidth)
+            .outerRadius(radius);
 
 var pie = d3.layout.pie()
-    .sort(null)
-    .value(function(d) { return d.count; });
+            .value(function(d) { return d.count; })
+            .sort(null);
 
-var svg = d3.select("#summary").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-  .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+var tooltip = d3.select('#chart')
+                .append('div')
+                .attr('class', 'tooltip');
+
+tooltip.append('div')
+       .attr('class', 'label');
+
+tooltip.append('div')
+       .attr('class', 'count');
+
+tooltip.append('div')
+       .attr('class', 'percent');
 
 d3.json("/organism/{{ summary.organism }}/organism.json", function(error, data) {
 
-  var g = svg.selectAll(".arc")
-        .data(pie(data))
-        .enter().append("g")
-        .attr("class", "arc");
+  var path = svg.selectAll('path')
+          .data(pie(data))
+          .enter()
+          .append('path')
+          .attr('d', arc)
+          .attr('fill', function(d, i) { 
+            return color(d.data.tgeClass);
+          })
+          .each(function(d) { this._current = d; });
 
-  g.append("path")
-        .attr("d", arc)
-        .style("fill", function (d) {
-        return color(d.data.tgeClass);
-    });
+  path.on('mouseover', function(d) {
+    // var total = d3.sum(data.map(function(d) {
+    //   return (d.enabled) ? d.data.count : 0;                       // 
+    // }));
+    // alert(total);
+    // var percent = Math.round(1000 * d.data.count / total) / 10;
+    //   tooltip.select('.percent').html(percent + '%'); 
+    tooltip.select('.label').html(d.data.tgeClass);
+    tooltip.select('.count').html(d.data.count); 
+    tooltip.style('display', 'block');
+  });
+  
+  path.on('mouseout', function() {
+    //tooltip.style('display', 'none');
+  });
 
-  g.append("text")
-      .attr("transform", function(d) { return "translate(" + labelArc.centroid(d) + ")"; })
-      .attr("dy", ".5em")
-      .style("font-size","10px")
-      .text(function(d) { return d.data.tgeClass +": "+d.data.count; });
+  var legend = svg.selectAll('.legend')
+    .data(color.domain())
+    .enter()
+    .append('g')
+    .attr('class', 'legend')
+    .attr('transform', function(d, i) {
+      var height = legendRectSize + legendSpacing;
+      var offset = height * color.domain().length / 2;
+      var horz   = -2 * legendRectSize;
+      var vert   = i  * height - offset;
+      return 'translate(' + horz + ',' + vert + ')';
+  });
+
+  legend.append('rect')
+        .attr('width',   legendRectSize)
+        .attr('height',  legendRectSize)                                   
+        .style('fill',   color)
+        .style('stroke', color)
+        // .attr('class',  'enabled')                                  
+        .on('click', function(label) {     
+
+          var rect = d3.select(this);                             
+          var enabled = true;                                    
+          // var totalEnabled = d3.sum(data.map(function(d) {     
+          //   return (d.enabled) ? 1 : 0;                           
+          // }));                                                    
+                
+          if (rect.attr('class') === 'disabled') {                
+            rect.attr('class', '');                               
+          } else {                                                
+            // if (totalEnabled < 2) return;                         
+            rect.attr('class', 'disabled');                       
+            enabled = false;                                      
+          }     
+
+          pie.value(function(d) {                                 
+            if (d.tgeClass === label) d.enabled = enabled;           
+            return (d.enabled) ? d.count : 0;                     
+          });     
+
+          path = path.data(pie(data));                         
+          
+          path.transition()                                       
+              .duration(750)                                        
+              .attrTween('d', function(d) {                         
+                var interpolate = d3.interpolate(this._current, d); 
+                this._current = interpolate(0);                     
+                return function(t) {                                
+                  return arc(interpolate(t));                       
+                };                                                  
+              });                                                   
+  });                                                       
+          
+  legend.append('text')
+        .attr('x', legendRectSize + legendSpacing)
+        .attr('y', legendRectSize - legendSpacing)
+        .text(function(d) { return d; });
 });
 
 
