--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -111,3 +111,32 @@
   -moz-transition: opacity .200s ease-in-out;
   -webkit-transition: opacity .200s ease-in-out;
 }
+
+.tooltip {
+  background: #eee;
+  box-shadow: 0 0 5px #999999;
+  color: #333;
+  /*display: none;*/
+  font-size: 12px;
+  left: 130px;
+  padding: 10px;
+  position: relative;
+  text-align: center !important;
+  top: 95px;
+  width: 80px;
+  z-index: 1000 !important;
+  border: 3px solid #73AD21;
+}
+
+.legend {
+  font-size: 12px;
+}
+
+rect {
+  cursor: pointer;                                              
+  stroke-width: 2;
+}
+
+rect.disabled {                                                 
+  fill: transparent !important;                                 
+} 
