Updated layout templates

--- a/pit_app/templates/layout.html
+++ b/pit_app/templates/layout.html
@@ -64,17 +64,17 @@
     </div>
 
     <script src="/static/js/ext/jquery-2.1.4.min.js"></script>
-    <!--script src="/static/js/ext/jquery.dataTables.js"></script>-->
-    <script src="/static/js/ext/datatables.min.js"></script>
     <script src="/static/js/ext/bootstrap.min.js"></script>
+    <script src="/static/js/ext/datatables.min.js"></script>
+    <!-- <script src="/static/js/ext/jquery.dataTables.js"></script> -->
     
-    <script src="/static/js/ext/metisMenu.min.js"></script>
-    <script src="/static/js/ext/plotly.min.js"></script>
-
-    <script src="/static/js/ext/sb-admin-2.js"></script>
-    <script src="/static/js/ext/validator.js"></script>
+    <!--<script src="/static/js/ext/metisMenu.min.js"></script>-->
+    <!--<script src="/static/js/ext/plotly.min.js"></script>-->
+    <!--<script src="/static/js/ext/sb-admin-2.js"></script>-->
+    <!--<script src="/static/js/ext/validator.js"></script>-->
     <!--script src="/static/js/ext/bootstrap-select.js"></script>-->
 
     <script src="/static/js/pit.js"></script>
+
   </body>
 </html>
