--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -92,10 +92,6 @@
   word-wrap: break-word;
 }
 
-#myModal {
-  z-index: 100;
-}
-
 .btn {
   font-size: 12px;
 }
@@ -118,13 +114,13 @@
   color: #333;
   /*display: none;*/
   font-size: 12px;
-  left: 130px;
+  /*left: 130px;*/
   padding: 10px;
   position: relative;
   text-align: center !important;
-  top: 95px;
+  /*top: 95px;*/
   width: 80px;
-  z-index: 1000 !important;
+  z-index: 1500 !important;
   border: 3px solid #73AD21;
 }
 
@@ -140,3 +136,77 @@ rect {
 rect.disabled {                                                 
   fill: transparent !important;                                 
 } 
+
+#tgeModal {
+  /*position: relative;*/
+  z-index: 1050;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+
+#tgeModal .close.btn {
+  font-size: 23px;
+}
+
+.modal-backdrop {
+  z-index: 1030;
+}
+
+/* Checkbox CSS from http://bootsnipp.com/snippets/0ln1R */
+.checkbox {
+  padding-left: 20px; }
+  .checkbox label {
+    display: inline-block;
+    position: relative;
+    padding-left: 5px; }
+    .checkbox label::before {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      width: 17px;
+      height: 17px;
+      left: 0;
+      margin-left: -20px;
+      border: 1px solid #cccccc;
+      border-radius: 3px;
+      background-color: #fff;
+      -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+      -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+      transition: border 0.15s ease-in-out, color 0.15s ease-in-out; }
+    .checkbox label::after {
+      display: inline-block;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      left: 0;
+      top: 0;
+      margin-left: -20px;
+      padding-left: 3px;
+      padding-top: 1px;
+      font-size: 11px;
+      color: #555555; }
+  .checkbox input[type="checkbox"] {
+    opacity: 0; }
+    .checkbox input[type="checkbox"]:focus + label::before {
+      outline: thin dotted;
+      outline: 5px auto -webkit-focus-ring-color;
+      outline-offset: -2px; }
+    .checkbox input[type="checkbox"]:checked + label::after {
+      font-family: 'FontAwesome';
+      content: "\f00c"; }
+    .checkbox input[type="checkbox"]:disabled + label {
+      opacity: 0.65; }
+      .checkbox input[type="checkbox"]:disabled + label::before {
+        background-color: #eeeeee;
+        cursor: not-allowed; }
+  .checkbox.checkbox-circle label::before {
+    border-radius: 50%; }
+  .checkbox.checkbox-inline {
+    margin-top: 0; }
+
+.checkbox-primary input[type="checkbox"]:checked + label::before {
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+.checkbox-primary input[type="checkbox"]:checked + label::after {
+  color: #fff; 
+}
