--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -210,3 +210,50 @@ rect.disabled {
 .checkbox-primary input[type="checkbox"]:checked + label::after {
   color: #fff; 
 }
+
+
+/* sunburst */
+#sidebar {
+  float: right;
+  width: 100px;
+}
+
+#sequence {
+  width: 600px;
+  height: 70px;
+}
+
+#legend {
+  padding: 10px 0 0 3px;
+}
+
+#sequence text, #legend text {
+  font-weight: 600;
+  fill: #fff;
+}
+
+#chart {
+  position: relative;
+}
+
+#chart path {
+  stroke: #fff;
+}
+
+#explanation {
+  position: absolute;
+  top: 150px;
+  left: 185px;
+  width: 140px;
+  text-align: center;
+  color: #666;
+  z-index: 1000;
+}
+
+#percentage {
+  font-size: 28px;
+}
+
+g text {
+  font-size: 10px;
+}
